# arm-face-identify

./: .gitignore  CMakeLists.txt  Dockerfile  config.json  main.cpp  opencv_build.md
Common/Include/: Opencv.h
Common/Source/: Opencv.cpp
app/: App.cpp  App.h  Application.cpp  Application.h  Define.h  Helper.hpp  IdentifyApplication.cpp  IdentifyApplication.h
app/Exception/: ExceptionHandler.h  ExceptionHandler.hpp
app/Face/: Identify.cpp  Identify.h  Identify.hpp  Train.cpp  Train.h
app/Mqtt/: DeviceCtrlSubscribe.cpp  DeviceCtrlSubscribe.h  DeviceCtrlSubscribe.hpp
app/Mqtt/Base/: Client.cpp  Client.h  ClientCallback.h  Helper.h  SubscribeManager.cpp  SubscribeManager.h  SubscriberAbstract.cpp  SubscriberAbstract.h
app/Util/: CloudEvent.h  CloudEvent.hpp  Encrypt.h  Filesystem.h
app_framework/: Application.cpp  Application.h
app_framework/Client/: ClientAbstract.h  ClientManager.hpp  SubscribeManager.hpp  SubscriberAbstract.hpp
app_framework/Client/Mqtt/: Client.cpp  Client.h  ClientCallback.hpp
app_framework/Config/: Config.h  Device.h  Mqtt.h
app_framework/Exception/: ExceptionHandler.hpp
app_framework/Http/: Client.hpp  HttpClient.hpp  HttpUrl.hpp
app_framework/Message/: IotMessage.h  MessagePack.h
app_framework/Mqtt/: Client.h  ClientCallback.hpp  Helper.hpp  SubscribeManager.cpp  SubscribeManager.h  SubscriberAbstract.cpp  SubscriberAbstract.h
app_framework/Util/: Base64.hpp  CloudEvent.hpp  Encrypt.hpp  Filesystem.hpp  Util.h
business/identify/Include/: DialogVideoFaceIdentify.h
business/identify/Source/: DialogVideoFaceIdentify.cpp
business/train/Include/: DialogVideoFaceTrain.h  VideoFaceTrain.h
business/train/Source/: DialogVideoFaceTrain.cpp  VideoFaceTrain.cpp
config/: App.h  Config.h  Device.h  FaceIdentify.h  Mqtt.h  Server.h
core/base/Enum/: Event.h
core/base/Include/: Opencv.h
core/base/Include/Event/: DetectedFeatureMatEvent.h  PredictFeatureMatEvent.h
core/base/Source/: Opencv.cpp
core/entity/Include/: DetectedFace.h  PredictFace.h  PredictMat.h
core/helper/Include/: File.h  Str.h
core/helper/Source/: File.cpp  Str.cpp
core/identify/Include/: DialogVideoFaceIdentify.h  FaceIdentify.h  Identify.h
core/identify/Source/: DialogVideoFaceIdentify.cpp  FaceIdentify.cpp  Identify.cpp
core/train/Include/: DialogVideoFaceTrain.h  FaceTrain.h  Train.h
core/train/Source/: DialogVideoFaceTrain.cpp  FaceTrain.cpp  Train.cpp
data/: default_model.xml
helper/Include/: File.h  Str.h
helper/Source/: Str.cpp
identify/: Makefile  main.cpp
identify/Include/: FaceIdentify.h  Identify.h
identify/Source/: FaceIdentify.cpp  Identify.cpp
identify_core/base/Include/Event/: BaseEvent.h  PredictFeatureMatEvent.h
identify_core/base/Source/: Opencv.cpp
identify_core/entity/Include/: DetectedMat.h
identify_core/helper/Include/: Str.h
identify_core/helper/Source/: Str.cpp
identify_core/identify/Include/: DialogVideoFaceIdentify.h  FaceIdentify.h
identify_core/identify/Source/: DialogVideoFaceIdentify.cpp  FaceIdentify.cpp  Identify.cpp
identify_core/train/Include/: DialogVideoFaceTrain.h
identify_core/train/Source/: DialogVideoFaceTrain.cpp  FaceTrain.cpp  Train.cpp
test/: at.txt
train/: MyFaceFisherModel.xml  MyFaceLBPHModel.xml  MyFacePCAModel.xml  main.cpp
train/Include/: FaceTrain.h  Train.h  VideoFaceTrain.h
train/Source/: FaceTrain.cpp  Train.cpp  VideoFaceTrain.cpp
